# PDF_Info_Gather

./: .gitignore  README.md  agent.py  aggregate_snippers.py  analysis_results.md  answers.py  config.toml  convert_filename_to_links.py  db.py  gather_snippets.py  gui.py  hello.py  list.py  pyproject.toml  temp.py  test.ipynb
